# lerw_sims

./: .gitignore  CMakeLists.txt  README.md  lerw_results_3D_1730295635_lengths.csv  lerw_results_3D_1730295635_stats.csv  lerw_results_3D_1730308384_lengths.csv  lerw_results_3D_1730308384_stats.csv  lerw_results_3D_1730347773_stats.csv  lerw_results_3D_1730461771_stats.csv  shell.nix  test.py
MH/: MH_main.py
MH/MH_sampler_v1/: MH_class_v1.py  MH_plots_v1.py  MH_split_R_hat.py  __init__.py
lerw_2d/: CMakeLists.txt  data_collect.cpp  main.cpp
lerw_cpp/: CMakeLists.txt  lerw_estimation.cpp
lerw_cpp/include/: lerw_2d.h  lerw_3d.h  random_utils.h  utils.h
lerw_cpp/src/: lerw_2d.cpp  lerw_3d.cpp  lerw_estimation.cpp  lerw_estimation_cuda.cpp  random_utils.cpp
lerw_cpp/tests/: CMakeLists.txt  test_lerw.cpp
lerw_general/: lerw_2d.py  lerw_3d.py  lerw_gpu.py  lerw_hr.py  lerw_lr_2d.py  lerw_nn.py  results_util.py  results_util_combine.py
lerw_long_range/: data_collect.cpp  main_1D.cpp  main_2D.cpp  main_3D_inf.cpp
lerw_py/: lerw.py  lerw_2d.py  lerw_3d.py  lerw_estimation.py  lerw_hr.py  lerw_lr_1d.py  lerw_lr_3d.py  precompute_cdf.py
some_sim_run_CSV_files/: lerw_results_3D_1730347773_lengths.csv  lerw_results_3D_1730461771_lengths.csv
tex_notes/: lerw_notes.aux  lerw_notes.fdb_latexmk  lerw_notes.fls  lerw_notes.tex
